# BasicApp-Aurora

./: CMakeLists.txt
rpm/: com.den3000.BasicApp.spec
